; ModuleID = '/home/carl/AnghaBench/poco/SevenZip/src/extr_7zIn.c_SzReadUInt32.c'
source_filename = "/home/carl/AnghaBench/poco/SevenZip/src/extr_7zIn.c_SzReadUInt32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SZ_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @SzReadUInt32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SzReadUInt32(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %23, %2
  %9 = load i32, i32* %5, align 4
  %10 = icmp slt i32 %9, 4
  br i1 %10, label %11, label %26

11:                                               ; preds = %8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @SzReadByte(i32* %12, i64* %6)
  %14 = call i32 @RINOK(i32 %13)
  %15 = load i64, i64* %6, align 8
  %16 = trunc i64 %15 to i32
  %17 = load i32, i32* %5, align 4
  %18 = mul nsw i32 8, %17
  %19 = shl i32 %16, %18
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* %20, align 4
  %22 = or i32 %21, %19
  store i32 %22, i32* %20, align 4
  br label %23

23:                                               ; preds = %11
  %24 = load i32, i32* %5, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %5, align 4
  br label %8

26:                                               ; preds = %8
  %27 = load i32, i32* @SZ_OK, align 4
  ret i32 %27
}

declare dso_local i32 @RINOK(i32) #1

declare dso_local i32 @SzReadByte(i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
